parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> function_list
Rule 2     function_list -> function_list function
Rule 3     function_list -> function
Rule 4     function -> FUNK ID LPAREN param_list RPAREN LESS_THAN type GREATER_THAN LCURLYEBR stmt_list RCURLYEBR
Rule 5     function -> FUNK ID LPAREN RPAREN LESS_THAN type GREATER_THAN LCURLYEBR stmt_list RCURLYEBR
Rule 6     param_list -> param_list COMMA parameter
Rule 7     param_list -> parameter
Rule 8     parameter -> ID AS type
Rule 9     type -> INT
Rule 10    type -> STR
Rule 11    type -> MSTR
Rule 12    type -> BOOL
Rule 13    type -> VECTOR
Rule 14    type -> NULL
Rule 15    stmt_list -> stmt_list statement
Rule 16    stmt_list -> statement
Rule 17    statement -> var_declaration
Rule 18    statement -> assignment
Rule 19    statement -> function_call_stmt
Rule 20    statement -> return_stmt
Rule 21    statement -> if_stmt
Rule 22    statement -> for_stmt
Rule 23    statement -> while_stmt
Rule 24    var_declaration -> ID DBL_COLON type SEMI_COLON
Rule 25    var_declaration -> ID DBL_COLON type EQ expression SEMI_COLON
Rule 26    assignment -> ID EQ expression SEMI_COLON
Rule 27    assignment -> array_access EQ expression SEMI_COLON
Rule 28    array_access -> ID LSQUAREBR expression RSQUAREBR
Rule 29    function_call_stmt -> function_call SEMI_COLON
Rule 30    function_call -> ID LPAREN arg_list RPAREN
Rule 31    function_call -> ID LPAREN RPAREN
Rule 32    function_call -> PRINT LPAREN arg_list RPAREN
Rule 33    function_call -> PRINT LPAREN RPAREN
Rule 34    arg_list -> arg_list COMMA expression
Rule 35    arg_list -> expression
Rule 36    return_stmt -> RETURN expression SEMI_COLON
Rule 37    return_stmt -> RETURN SEMI_COLON
Rule 38    if_stmt -> IF LSQUAREBR LSQUAREBR expression RSQUAREBR RSQUAREBR BEGIN stmt_list END
Rule 39    if_stmt -> IF LSQUAREBR LSQUAREBR expression RSQUAREBR RSQUAREBR BEGIN stmt_list END ELSE BEGIN stmt_list END
Rule 40    for_stmt -> FOR LPAREN ID EQ expression TO expression RPAREN BEGIN stmt_list END
Rule 41    while_stmt -> WHILE LPAREN expression RPAREN BEGIN stmt_list END
Rule 42    while_stmt -> WHILE LPAREN expression RPAREN DO BEGIN stmt_list END
Rule 43    expression -> expression PLUS expression
Rule 44    expression -> expression MINUS expression
Rule 45    expression -> expression MULTIPLY expression
Rule 46    expression -> expression DIVIDE expression
Rule 47    expression -> expression EQEQ expression
Rule 48    expression -> expression NEQ expression
Rule 49    expression -> expression LESS_THAN expression
Rule 50    expression -> expression GREATER_THAN expression
Rule 51    expression -> expression LTEQ expression
Rule 52    expression -> expression GTEQ expression
Rule 53    expression -> expression AND expression
Rule 54    expression -> expression OR expression
Rule 55    expression -> NOT expression
Rule 56    expression -> MINUS expression
Rule 57    expression -> LPAREN expression RPAREN
Rule 58    expression -> NUMBER
Rule 59    expression -> STRING
Rule 60    expression -> MSTRING
Rule 61    expression -> TRUE
Rule 62    expression -> FALSE
Rule 63    expression -> ID
Rule 64    expression -> array_access
Rule 65    expression -> function_call
Rule 66    expression -> ID LPAREN expression RPAREN
Rule 67    expression -> LEN LPAREN expression RPAREN
Rule 68    expression -> expression QMARK expression COLON expression

Terminals, with rules where they appear

AND                  : 53
AS                   : 8
BEGIN                : 38 39 39 40 41 42
BOOL                 : 12
COLON                : 68
COMMA                : 6 34
DBL_COLON            : 24 25
DIVIDE               : 46
DO                   : 42
ELSE                 : 39
END                  : 38 39 39 40 41 42
EQ                   : 25 26 27 40
EQEQ                 : 47
FALSE                : 62
FOR                  : 40
FUNK                 : 4 5
GREATER_THAN         : 4 5 50
GTEQ                 : 52
ID                   : 4 5 8 24 25 26 28 30 31 40 63 66
IF                   : 38 39
INT                  : 9
LCURLYEBR            : 4 5
LEN                  : 67
LESS_THAN            : 4 5 49
LPAREN               : 4 5 30 31 32 33 40 41 42 57 66 67
LSQUAREBR            : 28 38 38 39 39
LTEQ                 : 51
MINUS                : 44 56
MSTR                 : 11
MSTRING              : 60
MULTIPLY             : 45
NEQ                  : 48
NOT                  : 55
NULL                 : 14
NUMBER               : 58
OR                   : 54
PLUS                 : 43
PRINT                : 32 33
QMARK                : 68
RCURLYEBR            : 4 5
RETURN               : 36 37
RPAREN               : 4 5 30 31 32 33 40 41 42 57 66 67
RSQUAREBR            : 28 38 38 39 39
SEMI_COLON           : 24 25 26 27 29 36 37
STR                  : 10
STRING               : 59
TO                   : 40
TRUE                 : 61
VECTOR               : 13
WHILE                : 41 42
error                : 

Nonterminals, with rules where they appear

arg_list             : 30 32 34
array_access         : 27 64
assignment           : 18
expression           : 25 26 27 28 34 35 36 38 39 40 40 41 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 56 57 66 67 68 68 68
for_stmt             : 22
function             : 2 3
function_call        : 29 65
function_call_stmt   : 19
function_list        : 1 2
if_stmt              : 21
param_list           : 4 6
parameter            : 6 7
program              : 0
return_stmt          : 20
statement            : 15 16
stmt_list            : 4 5 15 38 39 39 40 41 42
type                 : 4 5 8 24 25
var_declaration      : 17
while_stmt           : 23

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . function_list
    (2) function_list -> . function_list function
    (3) function_list -> . function
    (4) function -> . FUNK ID LPAREN param_list RPAREN LESS_THAN type GREATER_THAN LCURLYEBR stmt_list RCURLYEBR
    (5) function -> . FUNK ID LPAREN RPAREN LESS_THAN type GREATER_THAN LCURLYEBR stmt_list RCURLYEBR

    FUNK            shift and go to state 4

    program                        shift and go to state 1
    function_list                  shift and go to state 2
    function                       shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> function_list .
    (2) function_list -> function_list . function
    (4) function -> . FUNK ID LPAREN param_list RPAREN LESS_THAN type GREATER_THAN LCURLYEBR stmt_list RCURLYEBR
    (5) function -> . FUNK ID LPAREN RPAREN LESS_THAN type GREATER_THAN LCURLYEBR stmt_list RCURLYEBR

    $end            reduce using rule 1 (program -> function_list .)
    FUNK            shift and go to state 4

    function                       shift and go to state 5

state 3

    (3) function_list -> function .

    FUNK            reduce using rule 3 (function_list -> function .)
    $end            reduce using rule 3 (function_list -> function .)


state 4

    (4) function -> FUNK . ID LPAREN param_list RPAREN LESS_THAN type GREATER_THAN LCURLYEBR stmt_list RCURLYEBR
    (5) function -> FUNK . ID LPAREN RPAREN LESS_THAN type GREATER_THAN LCURLYEBR stmt_list RCURLYEBR

    ID              shift and go to state 6


state 5

    (2) function_list -> function_list function .

    FUNK            reduce using rule 2 (function_list -> function_list function .)
    $end            reduce using rule 2 (function_list -> function_list function .)


state 6

    (4) function -> FUNK ID . LPAREN param_list RPAREN LESS_THAN type GREATER_THAN LCURLYEBR stmt_list RCURLYEBR
    (5) function -> FUNK ID . LPAREN RPAREN LESS_THAN type GREATER_THAN LCURLYEBR stmt_list RCURLYEBR

    LPAREN          shift and go to state 7


state 7

    (4) function -> FUNK ID LPAREN . param_list RPAREN LESS_THAN type GREATER_THAN LCURLYEBR stmt_list RCURLYEBR
    (5) function -> FUNK ID LPAREN . RPAREN LESS_THAN type GREATER_THAN LCURLYEBR stmt_list RCURLYEBR
    (6) param_list -> . param_list COMMA parameter
    (7) param_list -> . parameter
    (8) parameter -> . ID AS type

    RPAREN          shift and go to state 10
    ID              shift and go to state 8

    param_list                     shift and go to state 9
    parameter                      shift and go to state 11

state 8

    (8) parameter -> ID . AS type

    AS              shift and go to state 12


state 9

    (4) function -> FUNK ID LPAREN param_list . RPAREN LESS_THAN type GREATER_THAN LCURLYEBR stmt_list RCURLYEBR
    (6) param_list -> param_list . COMMA parameter

    RPAREN          shift and go to state 13
    COMMA           shift and go to state 14


state 10

    (5) function -> FUNK ID LPAREN RPAREN . LESS_THAN type GREATER_THAN LCURLYEBR stmt_list RCURLYEBR

    LESS_THAN       shift and go to state 15


state 11

    (7) param_list -> parameter .

    RPAREN          reduce using rule 7 (param_list -> parameter .)
    COMMA           reduce using rule 7 (param_list -> parameter .)


state 12

    (8) parameter -> ID AS . type
    (9) type -> . INT
    (10) type -> . STR
    (11) type -> . MSTR
    (12) type -> . BOOL
    (13) type -> . VECTOR
    (14) type -> . NULL

    INT             shift and go to state 17
    STR             shift and go to state 18
    MSTR            shift and go to state 19
    BOOL            shift and go to state 20
    VECTOR          shift and go to state 21
    NULL            shift and go to state 22

    type                           shift and go to state 16

state 13

    (4) function -> FUNK ID LPAREN param_list RPAREN . LESS_THAN type GREATER_THAN LCURLYEBR stmt_list RCURLYEBR

    LESS_THAN       shift and go to state 23


state 14

    (6) param_list -> param_list COMMA . parameter
    (8) parameter -> . ID AS type

    ID              shift and go to state 8

    parameter                      shift and go to state 24

state 15

    (5) function -> FUNK ID LPAREN RPAREN LESS_THAN . type GREATER_THAN LCURLYEBR stmt_list RCURLYEBR
    (9) type -> . INT
    (10) type -> . STR
    (11) type -> . MSTR
    (12) type -> . BOOL
    (13) type -> . VECTOR
    (14) type -> . NULL

    INT             shift and go to state 17
    STR             shift and go to state 18
    MSTR            shift and go to state 19
    BOOL            shift and go to state 20
    VECTOR          shift and go to state 21
    NULL            shift and go to state 22

    type                           shift and go to state 25

state 16

    (8) parameter -> ID AS type .

    RPAREN          reduce using rule 8 (parameter -> ID AS type .)
    COMMA           reduce using rule 8 (parameter -> ID AS type .)


state 17

    (9) type -> INT .

    RPAREN          reduce using rule 9 (type -> INT .)
    COMMA           reduce using rule 9 (type -> INT .)
    GREATER_THAN    reduce using rule 9 (type -> INT .)
    SEMI_COLON      reduce using rule 9 (type -> INT .)
    EQ              reduce using rule 9 (type -> INT .)


state 18

    (10) type -> STR .

    RPAREN          reduce using rule 10 (type -> STR .)
    COMMA           reduce using rule 10 (type -> STR .)
    GREATER_THAN    reduce using rule 10 (type -> STR .)
    SEMI_COLON      reduce using rule 10 (type -> STR .)
    EQ              reduce using rule 10 (type -> STR .)


state 19

    (11) type -> MSTR .

    RPAREN          reduce using rule 11 (type -> MSTR .)
    COMMA           reduce using rule 11 (type -> MSTR .)
    GREATER_THAN    reduce using rule 11 (type -> MSTR .)
    SEMI_COLON      reduce using rule 11 (type -> MSTR .)
    EQ              reduce using rule 11 (type -> MSTR .)


state 20

    (12) type -> BOOL .

    RPAREN          reduce using rule 12 (type -> BOOL .)
    COMMA           reduce using rule 12 (type -> BOOL .)
    GREATER_THAN    reduce using rule 12 (type -> BOOL .)
    SEMI_COLON      reduce using rule 12 (type -> BOOL .)
    EQ              reduce using rule 12 (type -> BOOL .)


state 21

    (13) type -> VECTOR .

    RPAREN          reduce using rule 13 (type -> VECTOR .)
    COMMA           reduce using rule 13 (type -> VECTOR .)
    GREATER_THAN    reduce using rule 13 (type -> VECTOR .)
    SEMI_COLON      reduce using rule 13 (type -> VECTOR .)
    EQ              reduce using rule 13 (type -> VECTOR .)


state 22

    (14) type -> NULL .

    RPAREN          reduce using rule 14 (type -> NULL .)
    COMMA           reduce using rule 14 (type -> NULL .)
    GREATER_THAN    reduce using rule 14 (type -> NULL .)
    SEMI_COLON      reduce using rule 14 (type -> NULL .)
    EQ              reduce using rule 14 (type -> NULL .)


state 23

    (4) function -> FUNK ID LPAREN param_list RPAREN LESS_THAN . type GREATER_THAN LCURLYEBR stmt_list RCURLYEBR
    (9) type -> . INT
    (10) type -> . STR
    (11) type -> . MSTR
    (12) type -> . BOOL
    (13) type -> . VECTOR
    (14) type -> . NULL

    INT             shift and go to state 17
    STR             shift and go to state 18
    MSTR            shift and go to state 19
    BOOL            shift and go to state 20
    VECTOR          shift and go to state 21
    NULL            shift and go to state 22

    type                           shift and go to state 26

state 24

    (6) param_list -> param_list COMMA parameter .

    RPAREN          reduce using rule 6 (param_list -> param_list COMMA parameter .)
    COMMA           reduce using rule 6 (param_list -> param_list COMMA parameter .)


state 25

    (5) function -> FUNK ID LPAREN RPAREN LESS_THAN type . GREATER_THAN LCURLYEBR stmt_list RCURLYEBR

    GREATER_THAN    shift and go to state 27


state 26

    (4) function -> FUNK ID LPAREN param_list RPAREN LESS_THAN type . GREATER_THAN LCURLYEBR stmt_list RCURLYEBR

    GREATER_THAN    shift and go to state 28


state 27

    (5) function -> FUNK ID LPAREN RPAREN LESS_THAN type GREATER_THAN . LCURLYEBR stmt_list RCURLYEBR

    LCURLYEBR       shift and go to state 29


state 28

    (4) function -> FUNK ID LPAREN param_list RPAREN LESS_THAN type GREATER_THAN . LCURLYEBR stmt_list RCURLYEBR

    LCURLYEBR       shift and go to state 30


state 29

    (5) function -> FUNK ID LPAREN RPAREN LESS_THAN type GREATER_THAN LCURLYEBR . stmt_list RCURLYEBR
    (15) stmt_list -> . stmt_list statement
    (16) stmt_list -> . statement
    (17) statement -> . var_declaration
    (18) statement -> . assignment
    (19) statement -> . function_call_stmt
    (20) statement -> . return_stmt
    (21) statement -> . if_stmt
    (22) statement -> . for_stmt
    (23) statement -> . while_stmt
    (24) var_declaration -> . ID DBL_COLON type SEMI_COLON
    (25) var_declaration -> . ID DBL_COLON type EQ expression SEMI_COLON
    (26) assignment -> . ID EQ expression SEMI_COLON
    (27) assignment -> . array_access EQ expression SEMI_COLON
    (29) function_call_stmt -> . function_call SEMI_COLON
    (36) return_stmt -> . RETURN expression SEMI_COLON
    (37) return_stmt -> . RETURN SEMI_COLON
    (38) if_stmt -> . IF LSQUAREBR LSQUAREBR expression RSQUAREBR RSQUAREBR BEGIN stmt_list END
    (39) if_stmt -> . IF LSQUAREBR LSQUAREBR expression RSQUAREBR RSQUAREBR BEGIN stmt_list END ELSE BEGIN stmt_list END
    (40) for_stmt -> . FOR LPAREN ID EQ expression TO expression RPAREN BEGIN stmt_list END
    (41) while_stmt -> . WHILE LPAREN expression RPAREN BEGIN stmt_list END
    (42) while_stmt -> . WHILE LPAREN expression RPAREN DO BEGIN stmt_list END
    (28) array_access -> . ID LSQUAREBR expression RSQUAREBR
    (30) function_call -> . ID LPAREN arg_list RPAREN
    (31) function_call -> . ID LPAREN RPAREN
    (32) function_call -> . PRINT LPAREN arg_list RPAREN
    (33) function_call -> . PRINT LPAREN RPAREN

    ID              shift and go to state 31
    RETURN          shift and go to state 43
    IF              shift and go to state 44
    FOR             shift and go to state 45
    WHILE           shift and go to state 46
    PRINT           shift and go to state 47

    stmt_list                      shift and go to state 32
    statement                      shift and go to state 33
    var_declaration                shift and go to state 34
    assignment                     shift and go to state 35
    function_call_stmt             shift and go to state 36
    return_stmt                    shift and go to state 37
    if_stmt                        shift and go to state 38
    for_stmt                       shift and go to state 39
    while_stmt                     shift and go to state 40
    array_access                   shift and go to state 41
    function_call                  shift and go to state 42

state 30

    (4) function -> FUNK ID LPAREN param_list RPAREN LESS_THAN type GREATER_THAN LCURLYEBR . stmt_list RCURLYEBR
    (15) stmt_list -> . stmt_list statement
    (16) stmt_list -> . statement
    (17) statement -> . var_declaration
    (18) statement -> . assignment
    (19) statement -> . function_call_stmt
    (20) statement -> . return_stmt
    (21) statement -> . if_stmt
    (22) statement -> . for_stmt
    (23) statement -> . while_stmt
    (24) var_declaration -> . ID DBL_COLON type SEMI_COLON
    (25) var_declaration -> . ID DBL_COLON type EQ expression SEMI_COLON
    (26) assignment -> . ID EQ expression SEMI_COLON
    (27) assignment -> . array_access EQ expression SEMI_COLON
    (29) function_call_stmt -> . function_call SEMI_COLON
    (36) return_stmt -> . RETURN expression SEMI_COLON
    (37) return_stmt -> . RETURN SEMI_COLON
    (38) if_stmt -> . IF LSQUAREBR LSQUAREBR expression RSQUAREBR RSQUAREBR BEGIN stmt_list END
    (39) if_stmt -> . IF LSQUAREBR LSQUAREBR expression RSQUAREBR RSQUAREBR BEGIN stmt_list END ELSE BEGIN stmt_list END
    (40) for_stmt -> . FOR LPAREN ID EQ expression TO expression RPAREN BEGIN stmt_list END
    (41) while_stmt -> . WHILE LPAREN expression RPAREN BEGIN stmt_list END
    (42) while_stmt -> . WHILE LPAREN expression RPAREN DO BEGIN stmt_list END
    (28) array_access -> . ID LSQUAREBR expression RSQUAREBR
    (30) function_call -> . ID LPAREN arg_list RPAREN
    (31) function_call -> . ID LPAREN RPAREN
    (32) function_call -> . PRINT LPAREN arg_list RPAREN
    (33) function_call -> . PRINT LPAREN RPAREN

    ID              shift and go to state 31
    RETURN          shift and go to state 43
    IF              shift and go to state 44
    FOR             shift and go to state 45
    WHILE           shift and go to state 46
    PRINT           shift and go to state 47

    stmt_list                      shift and go to state 48
    statement                      shift and go to state 33
    var_declaration                shift and go to state 34
    assignment                     shift and go to state 35
    function_call_stmt             shift and go to state 36
    return_stmt                    shift and go to state 37
    if_stmt                        shift and go to state 38
    for_stmt                       shift and go to state 39
    while_stmt                     shift and go to state 40
    array_access                   shift and go to state 41
    function_call                  shift and go to state 42

state 31

    (24) var_declaration -> ID . DBL_COLON type SEMI_COLON
    (25) var_declaration -> ID . DBL_COLON type EQ expression SEMI_COLON
    (26) assignment -> ID . EQ expression SEMI_COLON
    (28) array_access -> ID . LSQUAREBR expression RSQUAREBR
    (30) function_call -> ID . LPAREN arg_list RPAREN
    (31) function_call -> ID . LPAREN RPAREN

    DBL_COLON       shift and go to state 49
    EQ              shift and go to state 50
    LSQUAREBR       shift and go to state 51
    LPAREN          shift and go to state 52


state 32

    (5) function -> FUNK ID LPAREN RPAREN LESS_THAN type GREATER_THAN LCURLYEBR stmt_list . RCURLYEBR
    (15) stmt_list -> stmt_list . statement
    (17) statement -> . var_declaration
    (18) statement -> . assignment
    (19) statement -> . function_call_stmt
    (20) statement -> . return_stmt
    (21) statement -> . if_stmt
    (22) statement -> . for_stmt
    (23) statement -> . while_stmt
    (24) var_declaration -> . ID DBL_COLON type SEMI_COLON
    (25) var_declaration -> . ID DBL_COLON type EQ expression SEMI_COLON
    (26) assignment -> . ID EQ expression SEMI_COLON
    (27) assignment -> . array_access EQ expression SEMI_COLON
    (29) function_call_stmt -> . function_call SEMI_COLON
    (36) return_stmt -> . RETURN expression SEMI_COLON
    (37) return_stmt -> . RETURN SEMI_COLON
    (38) if_stmt -> . IF LSQUAREBR LSQUAREBR expression RSQUAREBR RSQUAREBR BEGIN stmt_list END
    (39) if_stmt -> . IF LSQUAREBR LSQUAREBR expression RSQUAREBR RSQUAREBR BEGIN stmt_list END ELSE BEGIN stmt_list END
    (40) for_stmt -> . FOR LPAREN ID EQ expression TO expression RPAREN BEGIN stmt_list END
    (41) while_stmt -> . WHILE LPAREN expression RPAREN BEGIN stmt_list END
    (42) while_stmt -> . WHILE LPAREN expression RPAREN DO BEGIN stmt_list END
    (28) array_access -> . ID LSQUAREBR expression RSQUAREBR
    (30) function_call -> . ID LPAREN arg_list RPAREN
    (31) function_call -> . ID LPAREN RPAREN
    (32) function_call -> . PRINT LPAREN arg_list RPAREN
    (33) function_call -> . PRINT LPAREN RPAREN

    RCURLYEBR       shift and go to state 53
    ID              shift and go to state 31
    RETURN          shift and go to state 43
    IF              shift and go to state 44
    FOR             shift and go to state 45
    WHILE           shift and go to state 46
    PRINT           shift and go to state 47

    statement                      shift and go to state 54
    var_declaration                shift and go to state 34
    assignment                     shift and go to state 35
    function_call_stmt             shift and go to state 36
    return_stmt                    shift and go to state 37
    if_stmt                        shift and go to state 38
    for_stmt                       shift and go to state 39
    while_stmt                     shift and go to state 40
    array_access                   shift and go to state 41
    function_call                  shift and go to state 42

state 33

    (16) stmt_list -> statement .

    RCURLYEBR       reduce using rule 16 (stmt_list -> statement .)
    ID              reduce using rule 16 (stmt_list -> statement .)
    RETURN          reduce using rule 16 (stmt_list -> statement .)
    IF              reduce using rule 16 (stmt_list -> statement .)
    FOR             reduce using rule 16 (stmt_list -> statement .)
    WHILE           reduce using rule 16 (stmt_list -> statement .)
    PRINT           reduce using rule 16 (stmt_list -> statement .)
    END             reduce using rule 16 (stmt_list -> statement .)


state 34

    (17) statement -> var_declaration .

    RCURLYEBR       reduce using rule 17 (statement -> var_declaration .)
    ID              reduce using rule 17 (statement -> var_declaration .)
    RETURN          reduce using rule 17 (statement -> var_declaration .)
    IF              reduce using rule 17 (statement -> var_declaration .)
    FOR             reduce using rule 17 (statement -> var_declaration .)
    WHILE           reduce using rule 17 (statement -> var_declaration .)
    PRINT           reduce using rule 17 (statement -> var_declaration .)
    END             reduce using rule 17 (statement -> var_declaration .)


state 35

    (18) statement -> assignment .

    RCURLYEBR       reduce using rule 18 (statement -> assignment .)
    ID              reduce using rule 18 (statement -> assignment .)
    RETURN          reduce using rule 18 (statement -> assignment .)
    IF              reduce using rule 18 (statement -> assignment .)
    FOR             reduce using rule 18 (statement -> assignment .)
    WHILE           reduce using rule 18 (statement -> assignment .)
    PRINT           reduce using rule 18 (statement -> assignment .)
    END             reduce using rule 18 (statement -> assignment .)


state 36

    (19) statement -> function_call_stmt .
